Finalización diseño y pruebas y resultados

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -212,3 +212,29 @@ doi = {10.1145/3160489.3160492}
   journal={Gu{\'\i}as r{\'a}pidas sobre nuevas metodolog{\'\i}as, Disponible en http://innovacioneducativa. upm. es/guias/Aprendizaje\_basado\_en\_problemas. pdf},
   year={2008}
 }
+
+@online{personalgithub,
+  title        = {Repositorio del Proyecto},
+  author       = {Noelia Carrasco Vilar},
+  year         = {2023},
+  howpublished = {\url{https://github.com/noocaaa/TFG_WEB/}},
+  note    = {Accedido el: 30 de Octubre, 2023}
+}
+
+}
+
+@misc{wireframe,
+    title = {Wireframe},
+    author = {Wireframe.cc},
+    year = {2023},
+    howpublished = {\url{http://www.wireframe.cc/}},
+    note = {Accedido el: 30 de Octubre, 2023}
+}
+
+@misc{astlibrary,
+    title = {Librería ast — Árboles de sintaxis abstracta},
+    author = {Python},
+    year = {2001-2023},
+    howpublished = {\url{https://docs.python.org/es/3/library/ast.html}},
+    note = {Accedido el: 30 de Octubre, 2023}
+}
