--- a/Plantilla_TFG_latex/secciones/03_ObjetivoPlanificación.tex
+++ b/Plantilla_TFG_latex/secciones/03_ObjetivoPlanificación.tex
@@ -1,6 +1,6 @@
 \chapter{Planificación} \label{chap:planification}
 
-La planificación es un aspecto importante en cualquier proyecto. Nos permite asegurar una correcta ejecución y el logro de los objetivos establecidos. Por ello, en este capítulo, abordaremos la organización y estructuración del proyecto para con tal de cumplir el objetivo principal. Además, un diagrama de Gantt se incluirá, al final de la sección, para ofrecer una visión detallada del tiempo asignado a cada tarea.
+La planificación es un aspecto importante en cualquier proyecto. Nos permite asegurar una correcta ejecución y el logro de los objetivos establecidos. Por ello, en este capítulo, abordaremos la organización y estructuración del proyecto para con tal de cumplir el objetivo principal. Además, un diagrama de Gantt se incluirá, al final de la sección \ref{fig:gantt_diagram}, para ofrecer una visión detallada del tiempo asignado a cada tarea.
 
 \section{Fases}
 
@@ -140,7 +140,7 @@ En esta parte del documento se realiza una descripción de los gastos ocasionado
 
 Con tal de realizar una buena evaluación del coste de un proyecto, se debe tener en cuenta todos aquellos gastos relacionados con licencias. En este caso, se optó por maximizar el uso de tecnologías \textit{OpenSource} para reducir costos.
 
-Para la interfaz de usuario, se usó HTML, CSS y JavaScript. En cuanto al Backend, se seleccionó Flask que también de costo cero. Además, se recurrió a PostgreSQL que no tiene ningún coste ni límite en cuanto a tamaño de la base de datos. Para el control de versiones, se usó Git y GitHub. Aunque GitHub ofrece planes de pago, dispone de opciones gratuitas. 
+Para la interfaz de usuario, se usó HTML, CSS y JavaScript. En cuanto al Backend, se seleccionó Flask que también de costo cero. Además, se recurrió a PostgreSQL que no tiene ningún coste ni límite en cuanto a tamaño de la base de datos. Para el control de versiones, se usó Git y GitHub \cite{personalgithub}. Aunque GitHub ofrece planes de pago, dispone de opciones gratuitas. 
 
 Por lo tanto, el coste de licencias es cero. 
 
@@ -197,7 +197,7 @@ Por lo tanto, se estima un coste adicional de 1.790€ para cubrir lo gastos ind
 
 \subsection{Total}
 
-Para finalizar, se muestra una tabla que resume todos los costes obtenidos, haciendo una estimación mensual y total del proyecto.
+Para finalizar, se muestra una tabla \ref{tab:resumen-costes} que resume todos los costes obtenidos, haciendo una estimación mensual y total del proyecto.
 \begin{table}[H]
     \centering
     \resizebox{\textwidth}{!}{%
