--- a/Plantilla_TFG_latex/secciones/06_Implementacion.tex
+++ b/Plantilla_TFG_latex/secciones/06_Implementacion.tex
@@ -67,36 +67,277 @@ En resumen, la base de datos del sistema es robusta, detallada y diseñada para 
     \label{fig:modeladodedatos}
 \end{figure}
 
-\section{Interfaces de Usuario}
-\subsection{Mockups o Capturas de Pantalla}
+\section{Interfaz de Usuario}
+
+\subsection{\textit{Mockups} de la página web}
+
+Este apartado incluye una serie de \textit{mockups} que representan las diferentes interfaces de usuario del sistema. Los \textit{mockups} han sido diseñados utilizando la herramienta en línea \textit{wireframe.cc} \cite{wireframe}. Esta herramienta permite la creación rápida y eficiente de prototipos de interfaces, facilitando la visualización y el diseño preliminar de las interacciones del usuario que se muestran a continuación.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/1-InicioDeSesion.png}
+    \caption{Inicio de Sesión para cualquier usuario.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/2-Registro.png}
+    \caption{Registro para cualquier usuario.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/3-Pag-Principal.png}
+    \caption{Página Principal  de la interfaz del estudiante.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/4-Juegos.png}
+    \caption{Apartado de Juegos de la interfaz del alumno.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/5-Teoria.png}
+    \caption{Visualización de la teoría para el estudiante.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/6-Consulta.png}
+    \caption{Apartado de contacto con el profesor.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/7-Ranking.png}
+    \caption{Apartado de Ranking de la interfaz del usuario.}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/8-Ejercicio.png}
+    \caption{Visualización de los ejercicios para el usuario.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/9-Consulta-Teoria.png}
+    \caption{Apartado donde los estudiantes pueden revisar conceptos teóricos.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/10-Configuracion-Est-.png}
+    \caption{Apartado de configuración del estudiante.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/11-Profesor-Principal.png}
+    \caption{Dashboard principal del profesor.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/12-Profesor-Estadisticas.png}
+    \caption{Pantalla de Estadísticas del profesor.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/13-Profesor-Corregir.png}
+    \caption{Pantalla con la lista de corrección de ejercicios.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/14-Profesor-Corregir-Ejercicio.png}
+    \caption{Panel para facilitar la corrección los ejercicios para el profesor.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/15-Profesor-Configuracion.png}
+    \caption{Apartado de Configuración del profesor.}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{imagenes/Mockups/16-Panel-Administrativo.png}
+    \caption{Visión general del panel administrativo.}
+\end{figure}
+
 \subsection{Interacción Usuario-Sistema}
-Detalles de la interacción del usuario con el sistema.
+
+El sistema está diseñado para una comunicación efectiva y amigable con el usuario. La fluidez en la navegación y la clara representación de opciones forman una experiencia de usuario destacable.
+
+\begin{enumerate}
+    \item \textbf{Inicio de Sesión}: Al entrar, la primera pantalla es la de inicio de sesión. Aquí, el usuario introduce su nombre y contraseña. Si las credenciales son correctas, se redirige a la página principal. De lo contrario, un breve mensaje de error informa del problema.
+    
+    \item \textbf{Registro}: Para nuevos usuarios, hay una pantalla especial donde se pide la información básica.
+    
+    \item \textbf{Página Principal}: Una vez dentro, la página principal se despliega. Ofrece múltiples funciones: desde juegos hasta rankings. Iconos y etiquetas guían al usuario, haciendo la navegación intuitiva.
+    
+    \item \textbf{Juegos, Teoría y Ejercicios}: Estas secciones son el corazón educativo del sistema. Los juegos son la motivación del estudiante. La teoría ofrece contenido educativo valioso y los ejercicios proponen retos prácticos que evalúan el aprendizaje del usuario.
+    
+    \item \textbf{Contacto con el profesor y Ranking}: Dos secciones cruciales. En 'Contacto con el profesor', el usuario puede realizar consultas y ver sus anteriores dudas conjuntamente con los comentarios de algunos ejercicios. 'Ranking' motiva a los usuarios mostrando una lista de los más destacados.
+    
+    \item \textbf{Interfaz del Profesor}: No solo los estudiantes tienen espacio en el sistema. Los profesores tienen su propia interfaz. Pueden observar estadísticas, corregir tareas y más. También tienen acceso a un panel administrativo.
+    
+    \item \textbf{Notificaciones}: Finalmente, las notificaciones juegan un papel vital. Informan al usuario sobre correcciones, nuevos contenidos o interacciones. Esta comunicación directa asegura que el usuario esté siempre al tanto de los eventos relevantes.
+\end{enumerate}
+
+El \textbf{Panel del Administrador} es una herramienta esencial para la gestión de la base de datos. Concretamente, ofrece una interfaz gráfica que evita la necesidad de interactuar a través de la terminal. Este enfoque agiliza las tareas cotidianas, y reduce la posibilidad de errores humanos que podrían surgir al gestionar datos de forma manual. Es importante mencionar que solo hemos mostrado un contexto general de la interfaz dentro de los mockups presentados. Estas representaciones cubren las funciones básicas, por ello, incluir más detalles sería redundante, ya que las operaciones fundamentales están claramente ilustradas.
+
+En resumen, el sistema busca una interacción amena y productiva proporcionando las herramientas que necesitan los diferentes usuarios, presentadas de manera clara y accesible.
 
 \section{Implementación de Algoritmos}
-\subsection{Algoritmo para la corrección y Evaluación de calidad del código}
+
+\subsection{Corrección y evaluación de calidad del código}
 
 El verdadero reto comienza tras la entrega de un ejercicio por parte del estudiante. La lógica de corrección evalúa el código en términos de precisión y calidad. Si un código no alcanza un estándar mínimo, el sistema propone ejercicios adicionales, reforzando así las áreas de mejora del estudiante \ref{fig:correccion}. La justificación detrás de esta lógica se centra en la premisa de que la repetición y el refuerzo son esenciales para consolidar el aprendizaje. Además, al establecer estándares de calidad, se fomentan las buenas prácticas de programación desde las etapas iniciales de formación.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{imagenes/correcionejercicios.png}
+    \includegraphics[width=0.8\textwidth]{imagenes/correcionejercicios.png}
     \caption{Diagrama de flujo para la selección de ejercicios}
     \label{fig:correccion}
     \end{figure}
 
-\subsection{Algoritmo para la selección y evaluación de ejercicios}
+\subsection{Selección y evaluación de ejercicios}
 
 El sistema prioriza la progresión estructurada del estudiante. Al ingresar, la plataforma identifica ejercicios en curso o determina el próximo paso en función de los requisitos del módulo. Esta estructura garantiza que, antes de enfrentarse a cualquier tarea, los conceptos teóricos relevantes sean presentados al estudiante \ref{fig:seleccion}. Esta estrategia se fundamenta en la pedagogía moderna, que sugiere que la teoría y la práctica deben ir de la mano para un aprendizaje óptimo.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{imagenes/seleccionejercicios.png}
+\includegraphics[width=0.8\textwidth]{imagenes/seleccionejercicios.png}
 \caption{Diagrama de flujo para la selección de ejercicios}
 \label{fig:seleccion}
 \end{figure}
 
-\section{Tecnologías y Herramientas}
-Enumere las tecnologías, lenguajes de programación, frameworks y bibliotecas utilizadas.
+\subsection{Cálculo de la puntuación}
+
+El sistema utiliza la función \texttt{calculate\_score} para calcular la puntuación de un ejercicio. Esta función combina múltiples criterios que inciden en la calidad y eficacia del código del estudiante.
+
+\begin{itemize}
+    \item \textbf{Problemas de Estilo}: Detectados mediante un análisis estático. Cada inconveniente identificado resta 5 puntos de los 100 iniciales.
+    
+    \item \textbf{Complejidad Ciclomática}: Un valor elevado (superior a 10) en la complejidad ciclomática suele indicar que el código puede ser difícil de mantener o probar. Por ello, se aplica una penalización significativa de 20 puntos. Esta cantidad ha sido establecida para subrayar la importancia de escribir código sencillo y fácilmente comprensible.
+        
+    \item \textbf{Bucles Detectados}: La presencia de bucles no es necesariamente un problema, pero puede llevar a un código menos eficiente o más complejo si no se usan adecuadamente. Se resta una cantidad menor, 15 puntos, con tal de incentivar el uso cuidadoso de estas estructuras.    
+\end{itemize}
+
+La fórmula que resume todo el proceso es la siguiente:
+
+\begin{equation}
+\max \left( 0, 100 - 5 \times \text{Problemas de Estilo} - 20 \times I_{\text{complejidad > 10}} - 15 \times I_{\text{bucles detectados}} \right)
+\end{equation}
+
+Cabe destacar que $I_{\text{condición}}$ actúa como una función indicadora. Toma el valor de 1 si la condición se cumple y 0 en caso contrario.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{imagenes/puntuacionejercicio.png}
+    \caption{Diagrama de flujo que ilustra cómo se calcula la puntuación}
+    \label{fig:puntuacion}
+\end{figure}
+
+Finalmente, la función tiene un control para que la puntuación no sea negativa, con tal de evitar la desmotivación del estudiante. Devuelve el máximo entre el valor calculado y cero.
+
+\subsection{Comprobaciones del código}
+
+Para evaluar el cumplimiento de ciertos requisitos educativos en el código, se emplea la técnica de Análisis de Árbol de Sintaxis Abstracta (AST) \cite{astlibrary}. En este contexto, se utiliza una clase especializada denominada \texttt{RequirementVisitor}, que hereda de la clase base \texttt{ast.NodeVisitor}.
+
+La clase \texttt{RequirementVisitor} es responsable de recorrer el AST generado a partir del código fuente. En su recorrido, identifica diferentes nodos que corresponden a constructos programáticos específicos: operadores básicos, estructuras de control, funciones, clases, entre otros.
+
+Una vez que se encuentra un nodo de interés, la clase cambia el estado de una bandera correspondiente en un diccionario llamado \textit{requirements\_found} a True. Este diccionario actúa como un registro para los diferentes requisitos que el código cumple o no cumple.
+
+Este mecanismo proporciona una manera eficiente y precisa de evaluar qué conceptos de programación se han aplicado en un determinado fragmento de código, lo que a su vez permite una evaluación pedagógica más informada. 
+
+Concretamente, dentro del constructor de la clase, se inicializa el diccionario con tal de tener un registro de los distintos elementos sintácticos y estructurales detectados en el código.  Con el método \texttt{visit\_BinOp}, se comprueba la presencia de operadores básicos como suma, resta, multiplicación y división. Usando \texttt{visit\_BoolOp} se identifica el uso de operadores lógicos como AND y OR. El uso de las declaraciones \texttt{if-else} se detecta con el método \texttt{visit\_If}. Los métodos \texttt{visit\_While} y \texttt{visit\_For} se encargan de identificar bucles \texttt{while} y \texttt{for}, respectivamente. Se detecta la definición de funciones mediante \texttt{visit\_FunctionDef}. El método \texttt{visit\_ClassDef} no solo detecta la definición de clases sino también la herencia mediante el atributo \texttt{bases}. Finalmente, \texttt{visit\_List} y \texttt{visit\_Dict} identifican el uso de listas y diccionarios, respectivamente.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{imagenes/comprobacionescodigo.png}
+    \caption{Diagrama de flujo que ilustra cómo se calcula la puntuación}
+    \label{fig:comprobaciones}
+\end{figure}
+
+\subsection{Cálculo del número extra de ejercicios}
+
+El principal objetivo de la función \texttt{determine\_number\_of\_extra\_exercises} es adaptar de manera dinámica la carga de ejercicios asignados a un estudiante en función de su desempeño reciente, ofreciendo una experiencia de aprendizaje más personalizada.
+
+\subsubsection{Parámetros de Entrada}
+
+La función acepta los siguientes argumentos:
+
+\begin{itemize}
+    \item \textbf{student\_id}: Este identificador único del estudiante se utiliza para acceder a sus registros y recuperar su historial de rendimiento.
+    \item \textbf{recent\_num = 4}: Este parámetro establece que se tendrán en cuenta los últimos 4 ejercicios completados para evaluar la tasa de fracaso del estudiante. El número 4 se ha seleccionado como un equilibrio entre tener una muestra lo suficientemente grande para ser significativa, pero no tan grande como para ser desactualizada.
+    \item \textbf{max\_extra\_exercises = 5}: Este es el número máximo de ejercicios adicionales que se pueden asignar. Limitar esto a 5 ayuda a prevenir una carga de trabajo abrumadora y repetitiva para el estudiante.
+    \item \textbf{failure\_rate\_threshold = 0.35}: Se asignarán ejercicios adicionales si la tasa de fracaso supera este umbral. El valor de 0.35 se establece para permitir cierto margen de error pero todavía requiere una intervención si el rendimiento del estudiante es consistentemente bajo.
+\end{itemize}
+
+\subsubsection{Flujo de Trabajo y Razonamiento}
+
+El flujo de trabajo de la función se puede desglosar en las siguientes etapas:
+
+\begin{enumerate}
+    \item \textbf{Consulta de Requisitos}: La función primero identifica el último ``requisito'' completado por el estudiante para determinar desde dónde empezar.
+    \item \textbf{Búsqueda de Ejercicios Relacionados}: Se recuperan los IDs de los ejercicios asociados con el requisito actual para tener un conjunto de datos sobre el cual operar.
+    \item \textbf{Recolección y Análisis de Datos}: A continuación, se evalúa el rendimiento del estudiante en estos ejercicios, especialmente en términos de fracasos y éxitos, para calcular una tasa de fracaso.
+    \item \textbf{Normalización del Tiempo Empleado}: Los tiempos empleados en los ejercicios se normalizan para darles una escala uniforme, lo que permite una mejor comparación.
+    \item \textbf{Ponderación y Cálculo Final}: Los dos factores (tasa de fracaso y tiempo normalizado) se combinan en una suma ponderada para determinar el número final de ejercicios extra.
+\end{enumerate}
+
+La fórmula utilizada para calcular el número de ejercicios extra es la siguiente:
+
+\begin{equation}
+N = \max\left(0, \text{round}\left( w_f \times f + w_t \times t \right) \times M \right)
+\end{equation}
+
+Donde:
+
+\begin{itemize}
+    \item \( w_f = 0.7 \) y \( w_t = 0.3 \) son los pesos asignados a la tasa de fracaso y al tiempo, respectivamente. Estos pesos reflejan la importancia relativa de cada factor; en este caso, la tasa de fracaso se considera más crítica.
+    \item \( f \) es la tasa de fracaso actual del estudiante.
+    \item \( t \) es el tiempo normalizado del último ejercicio.
+    \item \( M \) es el número máximo de ejercicios extra permitidos.
+\end{itemize}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.52\textwidth]{imagenes/numeroejersextras.png}
+    \caption{Diagrama de flujo que ilustra el cálculo del número extra de ejercicios}
+    \label{fig:numextraejercicios}
+\end{figure}
+
 
 \section{Implementación de Módulos de Aprendizaje Adaptativo}
-Describa cómo el sistema se adapta al progreso del estudiante.
+
+El núcleo de nuestro sistema educativo se centra en un modelo de aprendizaje adaptativo, diseñado para responder de manera dinámica al progreso y las necesidades del estudiante. La idea es no solo adaptar el tipo de material de aprendizaje presentado, sino también ajustar la cantidad y complejidad de los ejercicios asignados, todo en tiempo real.
+
+La adaptación del sistema se logra mediante una combinación de técnicas de análisis de datos. En primer lugar, se recopilan métricas clave del rendimiento del estudiante, como las tasas de éxito y fracaso en ejercicios, el tiempo empleado. Estos datos se almacenan y analizan para determinar patrones y tendencias que luego son utilizadas para tomar decisiones adaptativas.
+
+En el nivel más básico, el sistema cuenta con un conjunto predefinido de requisitos de aprendizaje, que son objetivos educativos específicos que el estudiante debe alcanzar. A medida que el estudiante avanza, el sistema evalúa continuamente su rendimiento y ajusta los requisitos de aprendizaje en función de este. Por ejemplo, si un estudiante supera con facilidad los ejercicios iniciales en un tema, el sistema puede decidir si avanzarle a un nuevo tema más rápidamente.
+
+Además, en situaciones donde un estudiante demuestra dificultades persistentes, como una tasa de fracaso elevada en ejercicios recientes, el sistema asigna automáticamente ejercicios adicionales de refuerzo con tal ayudar al estudiante a mejorar en las áreas problemáticas, como se detalla en la sección anterior sobre el cálculo del número extra de ejercicios.
+
+Un aspecto crítico que distingue nuestra implementación es la adaptabilidad basada en una solución de referencia proporcionada por el profesor. Este enfoque mitiga cualquier rigidez en el proceso de evaluación y garantiza que la retroalimentación sea contextual y ajustada. 
+
+El ajuste de la puntuación del estudiante se realiza mediante las siguientes fórmulas para calcular el fitness y la puntuación respectivamente:
+
+\begin{equation}
+\max\left(0, 1 - \frac{| \text{teacher\_score} - \text{student\_score} |}{100} \right)
+\end{equation}
+
+\begin{equation}
+\text{student\_score} \times= \text{fitness}
+\end{equation}
+
+La variable \texttt{fitness} calcula la discrepancia entre la puntuación del estudiante y la del profesor. Este valor luego multiplica la puntuación original del estudiante para ajustarla. 
+
+En resumen, la implementación de módulos de aprendizaje adaptativo en nuestro sistema se lleva a cabo a través de un análisis cuidadoso de los datos del rendimiento del estudiante, seguido de la toma de decisiones algorítmicas para personalizar la experiencia de aprendizaje. Esta aproximación permite no solo una mayor eficiencia en el proceso educativo, sino también una experiencia más personalizada y, por ende, más atractiva para el estudiante.
