--- a/Plantilla_TFG_latex/secciones/07_Resultados.tex
+++ b/Plantilla_TFG_latex/secciones/07_Resultados.tex
@@ -1,1 +1,11 @@
 \chapter{Pruebas y Resultados} \label{chap:resultadosExperimentales}
+
+Con el fin de evaluar exhaustivamente el sistema implementado, se realizaron pruebas con un pequeño pero significativo grupo de niños, compuesto por 3 participantes de distintas edades. Concretamente de 8, 12 y 15 años. Cada uno de ellos interactuó con el sistema de manera individual, en sesiones separadas. De esta manera, se obtuvo una evaluación más personalizada, detallada y precisa de la eficacia del sistema.
+
+Los indicadores cuantitativos mostraron resultados bastante alentadores. Los jóvenes usuarios lograron completar los primeros ejercicios con éxito. Además, el tiempo que pasaron interactuando con la plataforma se mantuvo en un rango óptimo. Por lo tanto, se puede decir que el sistema fue eficaz en adaptarse a dificultad. Sin embargo, se observó que el tiempo óptimo de interacción con el sistema debería ajustarse según la edad del usuario, dado que las capacidades de atención y ritmo de lectura varían considerablemente en función de la edad. 
+
+En términos de usabilidad, las respuestas fueron positivas. La plataforma fue calificada como fácil de usar y práctica, lo cual indica que el diseño de la interfaz es adecuado. La claridad en las instrucciones también fue un punto destacado aunque a veces desconcertante para los más pequeños.
+
+Entre las sugerencias aportadas, la más recurrente fue la adición de elementos gamificados con tal de incrementar la motivación y el compromiso. Este tipo de retroalimentación fue especialmente valiosa y se consideró como una mejora importante a realizar en el sistema. Además, la metodología de pruebas individuales permitió recoger opiniones y sugerencias sin la influencia del grupo.
+
+Para concluir, las pruebas iniciales sugirieron que el sistema es eficiente y efectivo en su misión de ofrecer una experiencia de aprendizaje adaptativo. Los comentarios y observaciones de los jóvenes participantes ofrecen un conjunto invaluable de datos que han servido para optimizar y enriquecer el sistema en futuras versiones.
