Finalización Conclusiones y Trabajo Futuro

--- a/Plantilla_TFG_latex/apendices/apendices.tex
+++ b/Plantilla_TFG_latex/apendices/apendices.tex
@@ -1,5 +1,9 @@
 \begin{appendices}
 
+\chapter{Recursos Informáticos}
+
+\chapter{Guion prueba plataforma}
+
 \chapter{Uso de la Plataforma}
 
 \end{appendices}
