--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -238,3 +238,75 @@ doi = {10.1145/3160489.3160492}
     howpublished = {\url{https://docs.python.org/es/3/library/ast.html}},
     note = {Accedido el: 30 de Octubre, 2023}
 }
+
+@misc{flask,
+    title = {Flask},
+    author = {Flask Development Team},
+    year = {2010-2023},
+    howpublished = {\url{https://flask.palletsprojects.com/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{flask-login,
+    title = {Flask-Login},
+    author = {Max Countryman},
+    year = {2012-2023},
+    howpublished = {\url{https://flask-login.readthedocs.io/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{flask-sqlalchemy,
+    title = {Flask-SQLAlchemy},
+    author = {Armin Ronacher},
+    year = {2011-2023},
+    howpublished = {\url{https://flask-sqlalchemy.palletsprojects.com/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{flask-cors,
+    title = {Flask-CORS},
+    author = {Cory Dolphin},
+    year = {2014-2023},
+    howpublished = {\url{https://flask-cors.readthedocs.io/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{flask-bcrypt,
+    title = {Flask-Bcrypt},
+    author = {Max Countryman},
+    year = {2013-2023},
+    howpublished = {\url{https://flask-bcrypt.readthedocs.io/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{python-dotenv,
+    title = {python-dotenv},
+    author = {Saurabh Kumar},
+    year = {2016-2023},
+    howpublished = {\url{https://github.com/theskumar/python-dotenv}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{datetime,
+    title = {datetime},
+    author = {Python Software Foundation},
+    year = {2001-2023},
+    howpublished = {\url{https://docs.python.org/3/library/datetime.html}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{werkzeug,
+    title = {Werkzeug},
+    author = {Pallets Team},
+    year = {2010-2023},
+    howpublished = {\url{https://werkzeug.palletsprojects.com/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
+
+@misc{radon,
+    title = {Radon},
+    author = {Michele Lacchia},
+    year = {2014-2023},
+    howpublished = {\url{https://radon.readthedocs.io/}},
+    note = {Accedido el: 31 de Octubre, 2023}
+}
