--- a/Plantilla_TFG_latex/apendices/apendices.tex
+++ b/Plantilla_TFG_latex/apendices/apendices.tex
@@ -1,9 +1,99 @@
 \begin{appendices}
 
-\chapter{Recursos Informáticos}
+\chapter{Recursos Informáticos} \label{chap:recursos}
 
-\chapter{Guion prueba plataforma}
+En este apéndice se detalla todos los recursos de hardware y software que se han usado durante la ejecución de este proyecto. Esta información es esencial para entender el entorno de desarrollo y ejecución, permitiendo así una mejor replicación o continuación del trabajo realizado.
+    
+\section{Hardware}
 
-\chapter{Uso de la Plataforma}
+Para el desarrollo y ejecución de este proyecto, se ha utilizado el siguiente hardware:
+
+\begin{itemize}
+    \item Ordenador portátil \textit{Xiaomi TM1703}.
+    \begin{itemize}
+    \item Arquitectura de 64 bits.
+    \item 8 GB de Memoria RAM.
+    \item Procesador \textit{ Intel(R) Core(TM) 5-8250U CPU @ 1.60GHz}.
+    \end{itemize}
+\end{itemize}
+
+\section{Software}
+
+En cuanto al software, se han utilizado las siguientes herramientas y plataformas:
+
+\begin{itemize}
+    \item \textbf{Sistema Operativo}: Ubuntu 20.04.6 LTS.
+    \item \textbf{Contenedores}: Docker, versión 24.0.5.
+    \item \textbf{IDE}: Visual Studio Code 1.83.1
+    \item \textbf{Base de datos}: PostgreSQL 16.0
+    \item \textbf{Lenguaje de programación}: Python 3.8.10
+    \item \textbf{Procesador de textos}: LaTex 3.14159265-2.6-1.40.20
+    \item \textbf{Diseño de E-R}: draw.io
+    \item \textbf{Modelado de datos}: PostgreSQL 16.0
+    \item \textbf{Diagrama de flujo y arquitectura}: PlantUML v1.2023.12
+    \item \textbf{Mockups}: Wireframe.cc
+    \item \textbf{Bibliotecas Python}:
+    \begin{itemize}
+        \item Flask \cite{flask}
+        \item Flask-Login \cite{flask-login}
+        \item Flask-SQLAlchemy \cite{flask-sqlalchemy}
+        \item Flask-CORS \cite{flask-cors}
+        \item Flask-Bcrypt \cite{flask-bcrypt}
+        \item python-dotenv \cite{python-dotenv}
+        \item datetime \cite{datetime}
+        \item werkzeug.utils \cite{werkzeug}
+        \item radon.complexity \cite{radon}
+    \end{itemize}
+\end{itemize}
+    
+\chapter{Guion pruebas con niños}
+
+Este guion tiene como objetivo guiar las pruebas de la plataforma de programación para niños. Se busca evaluar la usabilidad, el interés generado y la eficacia educativa del sistema.
+
+\section{Preparación}
+\begin{itemize}
+    \item Preparar un ambiente tranquilo y sin distracciones.
+    \item Asegurarse de que la plataforma funcione correctamente.
+    \item Tener a mano material para tomar notas.
+\end{itemize}
+
+\section{Participantes}
+\begin{itemize}
+    \item Edades entre 7 y 18 años.
+    \item Con y sin experiencia previa en programación.
+\end{itemize}
+
+\section{Actividades}
+\subsection*{Introducción y Consentimiento}
+\begin{itemize}
+    \item Explicar el objetivo de la prueba.
+\end{itemize}
+
+\subsection*{Prueba de Usabilidad}
+\begin{itemize}
+    \item Navegar por la plataforma.
+    \item Completar un ejercicio.
+    \item Utilizar las herramientas de ayuda o tutoriales, si están disponibles.
+\end{itemize}
+
+\subsection*{Prueba de Interés}
+\begin{itemize}
+    \item Observar las reacciones de los niños mientras usan la plataforma.
+    \item Preguntarles qué les gusta y qué no.
+\end{itemize}
+
+\subsection*{Prueba de Eficacia Educativa}
+\begin{itemize}
+    \item Evaluar el conocimiento adquirido con un pequeño cuestionario oral.
+\end{itemize}
+
+\section{Feedback y Conclusiones}
+\begin{itemize}
+    \item Pedir a los niños que proporcionen comentarios.
+    \item Analizar los resultados y planificar mejoras para la plataforma.
+\end{itemize}
+
+
+\chapter{Manual de uso de la Plataforma}
 
 \end{appendices}
